refactoring and documentation improvements for all tests